--- a/app.json
+++ b/app.json
@@ -26,7 +26,7 @@
       }
     },
     "web": {
-      "favicon": "./src/assets/favicon.png"
+      "favicon": "./src/assets/logo_transparent_background.png"
     }
   }
 }
