--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@emotion/react": "^11.0.0-rc.0",
     "@react-native-async-storage/async-storage": "^1.13.2",
     "@react-native-community/masked-view": "0.1.10",
+    "@react-native-community/slider": "^3.0.3",
     "@react-native-community/viewpager": "^4.2.0",
     "@react-navigation/native": "^5.8.9",
     "@react-navigation/stack": "^5.12.6",
@@ -29,21 +30,25 @@
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-39.0.4.tar.gz",
+    "react-native-gallery-swiper": "^1.26.4",
     "react-native-gesture-handler": "~1.7.0",
     "react-native-google-places-autocomplete": "^2.1.1",
+    "react-native-image-swiper": "0.0.8",
     "react-native-ratings": "^7.3.0",
     "react-native-reanimated": "~1.13.0",
     "react-native-safe-area-context": "3.1.4",
     "react-native-screens": "~2.10.1",
     "react-native-star-rating": "^1.1.0",
     "react-native-web": "~0.13.12",
-    "react-navigation-stack": "^2.10.1"
+    "react-navigation-stack": "^2.10.1",
+    "react-select": "^3.1.1"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
     "@types/react": "~16.9.35",
     "@types/react-dom": "~16.9.8",
     "@types/react-native": "~0.63.2",
+    "@types/react-select": "^3.0.28",
     "typescript": "~3.9.5"
   },
   "private": true
