--- a/package.json
+++ b/package.json
@@ -41,7 +41,8 @@
     "react-native-star-rating": "^1.1.0",
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.1",
-    "react-select": "^3.1.1"
+    "react-select": "^3.1.1",
+    "sentry-expo": "^3.0.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
