--- a/package.json
+++ b/package.json
@@ -52,8 +52,7 @@
     "react-native-web": "~0.13.12",
     "react-navigation-stack": "^2.10.1",
     "react-select": "^3.1.1",
-    "sentry-expo": "^3.0.4",
-    "yargs-parser": "^20.2.4"
+    "sentry-expo": "^3.0.4"
   },
   "devDependencies": {
     "@babel/core": "~7.9.0",
