--- a/app.json
+++ b/app.json
@@ -5,6 +5,7 @@
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
+    "owner": "margarita1026",
     "splash": {
       "image": "./src/assets/splash.png",
       "resizeMode": "contain",
@@ -29,7 +30,8 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.margarita26.pick-for-me"
     },
     "android": {
       "adaptiveIcon": {
