--- a/app.json
+++ b/app.json
@@ -6,6 +6,7 @@
     "orientation": "portrait",
     "icon": "./src/assets/icon.png",
     "owner": "margarita26",
+    "privacy": "public",
     "splash": {
       "image": "./src/assets/splash.png",
       "resizeMode": "contain",
